@@ -99,6 +99,9 @@ public class HTTPServer extends Server {
       httpHandler.setMaxTextLength(config.getMaxTextLength());
       httpHandler.setAllowOriginUrl(config.getAllowOriginUrl());
       httpHandler.setMaxCheckTimeMillis(config.getMaxCheckTimeMillis());
+      if (config.getMode() == HTTPServerConfig.Mode.AfterTheDeadline) {
+        httpHandler.setAfterTheDeadlineMode(config.getAfterTheDeadlineLanguage());
+      }
       server.createContext("/", httpHandler);
       executorService = Executors.newFixedThreadPool(THREAD_POOL_SIZE);
       server.setExecutor(executorService);
@@ -121,6 +124,8 @@ public class HTTPServer extends Server {
     if (args.length > 5 || usageRequested(args)) {
       System.out.println("Usage: " + HTTPServer.class.getSimpleName() + " [--config propertyFile] [--port|-p port] [--public]");
       System.out.println("  --config file  a Java property file with values for:");
+      System.out.println("                 'mode' - 'LanguageTool' or 'AfterTheDeadline' for emulation of After the Deadline output (optional, experimental)");
+      System.out.println("                 'afterTheDeadlineLanguage' - language code like 'en' or 'en-GB' (required if mode is 'AfterTheDeadline')");
       System.out.println("                 'maxTextLength' - maximum text length, longer texts will cause an error (optional)");
       System.out.println("                 'maxCheckTimeMillis' - maximum time in milliseconds allowed per check (optional)");
       printCommonOptions();
