@@ -42,6 +42,14 @@ LanguageTool Change Log
      with "--enable LIST_OF_RULES", now use "--enabledonly --enable LIST_OF_RULES" 
      (or "-eo -e LIST_OF_RULES").
 
+-Embedded server:
+    -Two new options can be set in the properties file to make LanguageTool
+     return the same XML format as After the Deadline (AtD). This way it can be used
+     as a drop-in replacement for AtD:
+     * mode - 'LanguageTool' or 'AfterTheDeadline'
+     * afterTheDeadlineLanguage - code of default language if mode is set to 'AfterTheDeadline'
+     NOTE: the 'AfterTheDeadline' mode should be considered experimental for now.
+
 
 2.6 (2014-06-30)
 
